--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "axios": "^1.8.2",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "expo": "53.0.13",
     "expo-blur": "~14.1.5",
@@ -33,17 +33,20 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
+    "formik": "^2.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.79.4",
     "react-native-calendars": "^1.1310.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-heroicons": "^4.0.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
