--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "expo": "53.0.13",
+    "expo": "53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.1",
-    "expo-splash-screen": "~0.30.9",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
+    "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "formik": "^2.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.1.0",
-    "react-native": "0.79.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-calendars": "^1.1310.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-heroicons": "^4.0.0",
@@ -55,7 +55,7 @@
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~53.0.9",
     "react-test-renderer": "^19.1.0",
     "typescript": "^5.3.3"
   },
